--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,3 +1,9 @@
-.div {
-  background-color: aqua;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.forFooterWrapper {
+  flex-grow: 1;
 }
