--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@import 'src/_variables';
+@import "src/_variables";
 
 .header {
   display: flex;
@@ -17,10 +17,7 @@
 
 .slogan {
   a:hover {
-    text-shadow: 1px 0px 1px #cccccc, 0px 1px 1px #eeeeee, 2px 1px 1px #cccccc,
-      1px 2px 1px #eeeeee, 3px 2px 1px #cccccc, 2px 3px 1px #eeeeee,
-      4px 3px 1px #cccccc, 3px 4px 1px #eeeeee, 5px 4px 1px #cccccc,
-      4px 5px 1px #eeeeee, 6px 5px 1px #cccccc, 5px 6px 1px #eeeeee,
-      7px 6px 1px #cccccc;
+    font-weight: bold;
+    text-shadow: 2px 2px 2px #ce5937;
   }
 }
