--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,3 +3,4 @@ $secondary-color: #79cccd;
 $gray-color: #767676;
 $dark-color: #484848;
 $background-color: #f5f5f5;
+$primary-shadow: 2px 2px 2px #ce5937;
