--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@import "src/_variables";
+@import "src/styles/_variables";
 
 .header {
   display: flex;
@@ -18,6 +18,6 @@
 .slogan {
   a:hover {
     font-weight: bold;
-    text-shadow: 2px 2px 2px #ce5937;
+    text-shadow: $primary-shadow;
   }
 }
