--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-@import "src/_variables";
+@import "src/styles/_variables";
 
 body {
   font-family: "Roboto", sans-serif;
