Home styles and logic (#8)
* Redux config

* Routing and Home page configs are done

* Minor changes on styles

* Recommended changes implemented

* layout fixes

* Home page styles and logic added

* flag folder removed

* recommended changes implemented

Co-authored-by: Mykyta Vostrikov <mykyta.vostrikov@sigma.software>

--- a/src/reusableComponents/Slogan/Slogan.module.scss
+++ b/src/reusableComponents/Slogan/Slogan.module.scss
@@ -1,5 +1,8 @@
+@import "src/styles/_variables";
+
 .wrapper {
   margin: 10px;
   font-style: italic;
   font-size: 15px;
+  color: $dark-color;
 }
