--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,4 +2,5 @@ $primary-color: #ff5a5f;
 $secondary-color: #79cccd;
 $gray-color: #767676;
 $dark-color: #484848;
-$white-color: #fff;
+$background-color: #f5f5f5;
+$primary-shadow: 2px 2px 2px #ce5937;
