--- a/src/components/CountryImage/CountryImage.module.scss
+++ b/src/components/CountryImage/CountryImage.module.scss
@@ -2,3 +2,11 @@
   max-width: 100%;
   max-height: 100%;
 }
+
+.card-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+}
